# docs/swagger.yaml
@@ -1,22 +1,51 @@
 definitions:
+  errcode.Error:
+    properties:
+      code:
+        type: integer
+      msg:
+        type: string
+    type: object
   model.User:
     properties:
-      email:
+      address:
+        type: string
+      age:
+        type: integer
+      createdAt:
         type: string
       id:
         type: integer
       name:
         type: string
-      pwd:
+      updatedAt:
         type: string
     type: object
-  v1.User:
+  model.UserList:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/model.User'
+        type: array
+      now_page:
+        description: 当前页
+        type: integer
+      page_size:
+        description: 每页数量
+        type: integer
+      pages:
+        description: 页码总数
+        type: number
+      total:
+        description: 总记录条数
+        type: integer
     type: object
 info:
   contact: {}
+  description: go-admin快速api开发框架
   title: go-admin快速开发示例
 paths:
-  /api/v1/user:
+  /api/get_token:
     get:
       produces:
       - application/json
@@ -24,10 +53,32 @@ paths:
         "200":
           description: 成功
         "400":
+          description: 未找到
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取token
+      tags:
+      - 固定接口
+  /api/v1/user:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.UserList'
+        "400":
           description: 请求错误
         "500":
           description: 内部错误
       summary: 获取多条用户信息
+      tags:
+      - 用户相关接口
     post:
       parameters:
       - description: 用户名
@@ -58,6 +109,8 @@ paths:
         "500":
           description: 内部错误
       summary: 新增用户信息
+      tags:
+      - 用户相关接口
   /api/v1/user/{id}:
     delete:
       parameters:
@@ -76,8 +129,15 @@ paths:
         "500":
           description: 内部错误
       summary: 删除指定用户信息
+      tags:
+      - 用户相关接口
     get:
       parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
       - description: 用户ID
         in: path
         name: id
@@ -90,11 +150,17 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/model.User'
+        "400":
+          description: 未找到
+          schema:
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: '#/definitions/v1.User'
+            $ref: '#/definitions/errcode.Error'
       summary: 获取指定用户信息
+      tags:
+      - 用户相关接口
     put:
       parameters:
       - description: 用户ID
@@ -108,15 +174,15 @@ paths:
         required: true
         schema:
           type: string
-      - description: 密码
+      - description: 年龄
         in: body
-        name: pwd
+        name: age
         required: true
         schema:
-          type: string
-      - description: 邮箱
+          type: integer
+      - description: 地址
         in: body
-        name: email
+        name: address
         required: true
         schema:
           type: string
@@ -130,4 +196,6 @@ paths:
         "500":
           description: 内部错误
       summary: 更新指定用户信息
+      tags:
+      - 用户相关接口
 swagger: "2.0"
